--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,13 +7,25 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
+set(FFMPEG_DIR ${CMAKE_SOURCE_DIR}/ffmpeg)
+include_directories(${FFMPEG_DIR}/include)
+link_directories(${FFMPEG_DIR}/lib)
+
 include_directories(include)
 
-add_executable(sccpp 
-  src/main.cpp
+add_executable(sccpp
+  src/main.cpp 
   src/logger.cpp
   src/device.cpp
   src/socket.cpp
+  src/decoder.cpp
+)
+
+target_link_libraries(sccpp
+  avcodec
+  avutil
+  avformat
+  swscale
 )
 
 if(WIN32)
